<resources>
    <string name="app_name">About Me</string>
    <string name="nome_usuario">Kassiano Resende</string>
    <string name="profissao">Professor</string>

    <string name="bio">

        Kassiano Resende trabalha com desenvolvimento de software desde 2008, e desde então teve sua carreira voltada a plataformas web e mobile. Atualmente, é professor do SENAI-SP, ministrando disciplinas de programação para dispositivos móveis e projetos de software. Apaixonado por open source, está sempre estudando novas tecnologias.

        A linguagem Kotlin vem ganhando cada vez mais destaque no cenário do desenvolvimento de aplicativos. Projetada para ter uma interoperabilidade total com código Java, Kotlin tem sido a primeira escolha na criação de aplicativos Android, sendo multiparadigma e multiplataforma. Trata-se de uma linguagem moderna, concisa e poderosa, oferecendo segurança, clareza e suporte a ferramentas de alta produtividade.

        Neste livro, Kassiano Resende apresenta a linguagem Kotlin tanto para quem já conhece Java ou não, com uma didática prática e divertida. Você verá todos os passos necessários para construir e publicar na Play Store aplicações mobile em Kotlin, no ambiente de desenvolvimento Android Studio. O escopo das aplicações apresentadas no livro vai além das funcionalidades da linguagem, com a utilização de banco de dados, acesso a APIs REST e funcionalidades dos smartphones, como notificações, acesso à galeria de imagens, câmera e localização através de GPS.

        Neste livro, Kassiano Resende apresenta a linguagem Kotlin tanto para quem já conhece Java ou não, com uma didática prática e divertida. Você verá todos os passos necessários para construir e publicar na Play Store aplicações mobile em Kotlin, no ambiente de desenvolvimento Android Studio. O escopo das aplicações apresentadas no livro vai além das funcionalidades da linguagem, com a utilização de banco de dados, acesso a APIs REST e funcionalidades dos smartphones, como notificações, acesso à galeria de imagens, câmera e localização através de GPS.

    </string>
    <string name="hint_profissao">Digite sua profissão</string>
    <string name="button_text">Feito</string>
</resources>
