<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp"
        android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/nome_usuario"
                />

            <TextView
                android:id="@+id/textViewProfissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profissao"
                />

            <Button
                android:id="@+id/buttonEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Editar" />

        </LinearLayout>

    </LinearLayout>

        <EditText
            android:id="@+id/editProfissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_profissao"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonProfissao"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewBiografia"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio" />
</LinearLayout>

</ScrollView>